--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,26 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Foodify",
+  "name": "Foodify - A Recipie Showcase",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "https://image.flaticon.com/icons/png/512/1946/1946436.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "https://image.flaticon.com/icons/png/512/1946/1946436.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "https://image.flaticon.com/icons/png/512/1946/1946436.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "start_url": "/",
+  "display": "fullscreen",
+  "theme_color": "#FB4E4E",
+  "background_color": "#FB4E4E",
+  "scope": "/src"
 }
