Gobalization of Style Variable & FoodItem Image updated!

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Foodify",
-  "name": "Foodify - A Recipie Showcase",
+  "short_name": "FoodGear",
+  "name": "FoodGear : A Recipie Showcase Solution",
   "icons": [
     {
       "src": "%PUBLIC_URL%/brand/brand-logo.png",
