--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,26 @@
 {
   "short_name": "Foodlo",
-  "name": "Foodlo : A Recipie Showcase Solution",
+  "name": "Foodlo",
+  "description": "A Recipie Showcase Solution",
   "icons": [
     {
-      "src": "/brand/foodlos64.png",
+      "src": "/brand/foodlo64.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png"
     },
     {
-    "src": "/brand/foodlos192.png",
+    "src": "/brand/foodlo192.png",
       "type": "image/png",
       "sizes": "192x192",
        "purpose": "any maskable"
     },
     {
-      "src": "/brand/foodlos512.png",
+      "src": "/brand/foodlo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": "http://localhost:3000/index.html",
+  "start_url": "/",
   "display": "fullscreen",
   "theme_color": "#f07e01",
   "background_color": "#f07e01",
