Review Btn Added & other fixes fixed

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,7 +15,7 @@
        "purpose": "any maskable"
     },
     {
-      "src": "/brand/foodlo512.png",
+      "src": "/brand/foodlos512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
